--- a/Home.css
+++ b/Home.css
@@ -86,8 +86,14 @@
   text-transform: uppercase;
   letter-spacing: 0px;
   background-image: none;
-  margin: -60px 52px 93px auto;
+  margin: -60px 52px 0 auto;
   padding: 15px 46px 16px 45px;
+}
+
+.u-section-1 .u-image-2 {
+  width: 51px;
+  height: 51px;
+  margin: -123px 16px 0 auto;
 }
 
 .u-section-1 .u-text-2 {
@@ -105,7 +111,7 @@
   grid-gap: 0px 0px;
 }
 
-.u-section-1 .u-image-2 {
+.u-section-1 .u-image-3 {
   background-image: url("images/mens-sweater-outfit-ideas.png");
 }
 
@@ -117,7 +123,7 @@
   background-position: 50% 50%;
 }
 
-.u-section-1 .u-image-3 {
+.u-section-1 .u-image-4 {
   background-image: url("images/SHOT_VIDEO_800X1040_2eb74ba8-a795-423e-83ea-96a5d91be5481.webp");
 }
 
@@ -129,7 +135,7 @@
   background-position: 50% 50%;
 }
 
-.u-section-1 .u-image-4 {
+.u-section-1 .u-image-5 {
   background-image: url("images/11062b_7d6dcf96ae614607bd3ed8d3590bf57c_mv2_d_2346_1998_s_2.webp");
 }
 
